[gd_scene load_steps=2 format=3 uid="uid://dovkunoq4hlre"]

[ext_resource type="Script" uid="uid://dg6ark1xene3e" path="res://components/height_controller/height_controller.gd" id="1_uging"]

[node name="HeightController" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_uging")

[node name="RespawnTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="RespawnTimer" to="." method="respawn"]
